build-logs-failed/build-xmlgen-0.6.2.2.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - xmlgen-0.6.2.2 (lib) (first run)
 - xmlgen-0.6.2.2 (test:xmlgen-tests) (first run)
Configuring library for xmlgen-0.6.2.2...
Preprocessing library for xmlgen-0.6.2.2...
Building library for xmlgen-0.6.2.2...
[1 of 1] Compiling Text.XML.Generator
Configuring test suite 'xmlgen-tests' for xmlgen-0.6.2.2...
Preprocessing test suite 'xmlgen-tests' for xmlgen-0.6.2.2...
Building test suite 'xmlgen-tests' for xmlgen-0.6.2.2...
[1 of 1] Compiling Main

test/GeneratorTest.hs:196:16: error:
    • The constructor ‘Q.Success’ should have 6 arguments, but has been given 3
    • In the pattern: Q.Success _ _ _
      In a case alternative: Q.Success _ _ _ -> return ()
      In a stmt of a 'do' block:
        case res of
          Q.Success _ _ _ -> return ()
          _ -> H.assertFailure
                 ("QC property " ++ name ++ " failed: " ++ show res)
    |
196 |                Q.Success _ _ _ -> return ()
    |                ^^^^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build test:xmlgen-tests from xmlgen-0.6.2.2.

